# vii

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml  social.yml  test-workflow.yml  workflow.yml
src/tide/: __init__.py  app.py
src/vii/: __init__.py  app.py  commands.py  config.py  constants.py  content.py  git_handlers.py  git_state.py  git_utils.py  key_handlers.py  protocol.py  tree_sitter_highlight.py  widgets.py
tests/: __init__.py  test_app.py  test_performance.py
