[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tide"
version = "0.1.0"
description = "Textual IDE - A terminal-based IDE with file browser that opens files in your editor"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Alex Clark"},
]
dependencies = [
    "textual>=0.50.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "textual-dev>=1.0.0",
]

[project.scripts]
tide = "tide.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tide"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

