[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vii"
version = "0.1.0a1"
description = "vii - A terminal-based file browser that opens files in your editor"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Alex Clark"},
]
dependencies = [
    "textual>=0.50.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "textual-dev>=1.0.0",
    "pre-commit>=3.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
vii = "vii.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vii"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
