[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vii"
version = "0.1.0a1"
description = "vii - A terminal-based file browser that opens files in your editor"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jeffrey 'Alex' Clark"},
]
dependencies = [
    "textual>=0.50.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "textual-dev>=1.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
]

[project.scripts]
vii = "vii.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vii"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
